fix prometheus data source url so it works

--- a/src/grafana/provisioning/datasources/ds_prometheus.yml
+++ b/src/grafana/provisioning/datasources/ds_prometheus.yml
@@ -8,4 +8,4 @@ datasources:
 - name: DS_PROMETHEUS
   type: prometheus
   access: proxy
-  url: http://ms_prometheus:9090
+  url: http://prometheus:9090
