--- a/src/sql/Dockerfile
+++ b/src/sql/Dockerfile
@@ -26,6 +26,9 @@ $$ echo $VERSION_ID \
 RUN /bin/mkdir -p /var/opt/mssql/backup \
 && /bin/mkdir -p /var/opt/mssql/dbfiles
 
+RUN wget -P /usr/bin/ https://raw.githubusercontent.com/BrentOzarULTD/SQL-Server-First-Responder-Kit/cf35b974d1614049b86816da053bcda4f6d6ec82/Install-All-Scripts.sql
+RUN wget -P /usr/bin/ https://raw.githubusercontent.com/olahallengren/sql-server-maintenance-solution/499c42bec571f5e214a64c01a4cb5c012bf3a6e8/MaintenanceSolution.sql
+
 USER 10001:0
 
 COPY --chown=10001:0 entrypoint.sh /usr/bin
